1.金額誤差修改完成 2.新增單元測試(分段式利率待優化)